[Mobile] fix: photo attachment in maintenance event (#140)
* fixed error after adding photo to event

* feat: add image storage and retrieval

* fix: resolve application-test.properties conflict

* fix: restore _doubleValue lost during merge and update migrations naming

* fix: fix createPayload function

* picking muliple photos, local cache

* photo preview & UI improvement

* updated delete and edit for repair event

* list view for photos in draft screen

* refactored large files

---------
